--- a/exam/data/html/exam/tpls/app/basics_open.html
+++ b/exam/data/html/exam/tpls/app/basics_open.html
@@ -180,6 +180,19 @@
 		            <ul class="thumbnails">
 												<li class="span2">
 							<div class="thumbnail">
+								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=21" title="图片预览"><img alt="300x200" src="files/attach/images/content/20150610/14339174438301.jpg" style="width:160px;"/></a>
+								<div class="caption">
+									<div class="text-center">
+										<h6>图片预览</h6>
+										<p>
+																				<a class="btn" href="javascript:;" title="图片预览">已开通</a>
+																				</p>
+									</div>
+								</div>
+							</div>
+						</li>
+																		<li class="span2">
+							<div class="thumbnail">
 								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=20" title="我的考场"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
 								<div class="caption">
 									<div class="text-center">
