--- a/exam/data/html/exam/tpls/app/exam.html
+++ b/exam/data/html/exam/tpls/app/exam.html
@@ -85,7 +85,7 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li>
-						<a href="index.php?exam-app-basics">我的考场</a> <span class="divider">/</span>
+						<a href="index.php?exam-app-basics">付费</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
 						正式考试
@@ -98,7 +98,7 @@
 				</ul>
 				<div class="alert alert-info">
 					<strong>提示：</strong>
-					<p>本考场开启时间 2015-06-08 11:25:00 - 2015-06-08 17:25:00 ； 考试次数 不限 ； 抽卷规则 用户手选试卷。</p>
+					<p>本考场开启时间 2015-05-01 08:00:00 - 2015-07-01 08:00:00 ； 考试次数 不限 ； 抽卷规则 用户手选试卷。</p>
 				</div>
             	<ul class="unstyled">
                 	<li><b>1、</b>点击考试名称按钮进入答题界面，考试开始计时。</li>
@@ -107,8 +107,19 @@
                 	<li><b>4、</b>系统自动记录模拟考试的考试记录，学员考试结束后可以进入“答题记录”功能进行查看。</li>
                 	<li>&nbsp;</li>
                 </ul>
-															<p class="alert">本考场开放考试时间为：2015-06-08 11:25:00 - 2015-06-08 17:25:00，目前不是考试时间，请在规定时间内前来考试哦。</p>
-												</div>
+																					<ul class="thumbnails">
+														<li class="span2">
+								<div class="thumbnail">
+									<img src="app/core/styles/images/icons/Watches.png"/>
+									<div class="caption">
+										<p class="text-center">
+																						<a class="ajax btn btn-primary" href="index.php?exam-app-exam-selectquestions&examid=14" title="随机测试">随机测试</a>
+																					</p>
+									</div>
+								</div>
+							</li>
+													</ul>
+																		</div>
 		</div>
 	</div>
 </div>
