--- a/exam/data/html/exam/tpls/app/index.html
+++ b/exam/data/html/exam/tpls/app/index.html
@@ -100,10 +100,30 @@
 				<ul class="thumbnails">
 										<li class="span2">
 						<div class="thumbnail">
+							<img alt="300x200" src="files/attach/images/content/20150610/14339174438301.jpg"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=21" title="图片预览">图片预览</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
 							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
 							<div class="caption">
 								<p class="text-center">
 									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=20" title="我的考场">我的考场</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=10" title="临床">临床</a>
 								</p>
 							</div>
 						</div>
