--- a/exam/data/html/exam/tpls/master/basic.html
+++ b/exam/data/html/exam/tpls/master/basic.html
@@ -145,6 +145,26 @@
 		            <tbody>
 		                				        <tr>
 							<td>
+								<input type="checkbox" name="delids[21]" value="1"/>
+							</td>
+							<td>
+								21							</td>
+							<td>
+								图片预览							</td>
+							<td>
+								全国							</td>
+							<td>
+								临床							</td>
+							<td>
+								<div class="btn-group">
+									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=21" title="考试范围"><em class="icon-cog"></em></a>
+									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=21" title="修改"><em class="icon-edit"></em></a>
+									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=21&page=" title="删除"><em class="icon-remove"></em></a>
+								</div>
+							</td>
+				        </tr>
+				        				        <tr>
+							<td>
 								<input type="checkbox" name="delids[20]" value="1"/>
 							</td>
 							<td>
