--- a/exam/data/html/exam/tpls/master/basic_modify.html
+++ b/exam/data/html/exam/tpls/master/basic_modify.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="app/core/styles/js/swfu/swfupload.js"></script>
 <script type="text/javascript" src="app/core/styles/js/plugin.js"></script>
 </head><body>
-<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">考试系统管理平台</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">					<li>						<a href="index.php?core-master">全局</a>					</li>															<li>						<a href="index.php?user-master">用户模块</a>					</li>																				<li class="active">						<a href="index.php?exam-master">考试模块</a>					</li>																																								<li>						<a href="index.php?content-master">内容模块</a>					</li>																				<li>						<a href="index.php?bank-master">财务模块</a>					</li>														</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">网站首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">peadmin<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?core-master-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
+<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">考试系统管理平台</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">					<li>						<a href="index.php?core-master">全局</a>					</li>															<li>						<a href="index.php?user-master">用户模块</a>					</li>																				<li class="active">						<a href="index.php?exam-master">考试模块</a>					</li>																																								<li>						<a href="index.php?content-master">内容模块</a>					</li>																				<li>						<a href="index.php?bank-master">财务模块</a>					</li>														</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">网站首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">hongmomanu<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?core-master-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
 			<div class="accordion" id="accordion-13465">	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-707348">考试设计 </a>		</div>		<div class="accordion-body in collapse" id="accordion-element-707348">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="?exam-master-basic">考场列表</a></li>		    		<li><a href="?exam-master-basic-area">地区设置</a></li>		    		<li><a href="?exam-master-basic-subject">科目管理</a></li>		    		<li><a href="?exam-master-basic-questype">题型管理</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-2120761">课程开通 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-2120761">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-users">开通课程</a></li>					<!--<li><a href="index.php?exam-master-rowsquestions">成绩管理</a></li>-->				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212076">试题管理 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212076">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-questions">普通试题管理</a></li>					<li><a href="index.php?exam-master-rowsquestions">题帽题管理</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212096">试卷管理 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212096">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-exams">试卷列表</a></li>					<li><a href="index.php?exam-master-exams-autopage">随机组卷</a></li>					<li><a href="index.php?exam-master-exams-selfpage">手工组卷</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212090">回收站 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212090">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-recyle">普通试题</a></li>					<li><a href="index.php?exam-master-recyle-rows">题帽题</a></li>					<li><a href="index.php?exam-master-recyle-knows">知识点</a></li>				</ul>			</div>		</div>	</div></div>		</div>
@@ -46,7 +46,7 @@
 				<div class="control-group">
 					<label for="basic" class="control-label">考场名称</label>
 					<div class="controls">
-						<input id="basic" name="args[basic]" type="text" value="safsdf" needle="needle" msg="您必须输入考场名称" />
+						<input id="basic" name="args[basic]" type="text" value="图片预览" needle="needle" msg="您必须输入考场名称" />
 					</div>
 				</div>
 				<div class="control-group">
@@ -56,7 +56,7 @@
 							<div class="thumbnail">
 								<a href="javascript:;" class="second label""><em class="uploadbutton" id="catimg" exectype="thumb"></em></a>
 								<div class="first" id="catimg_percent"></div>
-								<div class="boot"><img src="app/core/styles/images/noimage.gif" id="catimg_view"/><input type="hidden" name="args[basicthumb]" value="" id="catimg_value"/></div>
+								<div class="boot"><img src="files/attach/images/content/20150610/14339174438301.jpg" id="catimg_view"/><input type="hidden" name="args[basicthumb]" value="files/attach/images/content/20150610/14339174438301.jpg" id="catimg_value"/></div>
 							</div>
 						</div>
 					</div>
@@ -77,6 +77,7 @@
 				  						  		<option value="5">临床2</option>
 				  						  		<option value="6">临床3</option>
 				  						  		<option value="7">考核</option>
+				  						  		<option value="8">技巧</option>
 				  						  		</select>
 					</div>
 				</div>
@@ -85,7 +86,7 @@
 					<div class="controls">
 						<select id="basicareaid" name="args[basicareaid]" needle="needle" msg="您必须选择考试地区">
 		        		<option value="">选择地区</option>
-				  						  		<option value="1">全国</option>
+				  						  		<option value="1" selected>全国</option>
 				  						  		<option value="3">河南</option>
 				  						  		<option value="4">北京</option>
 				  						  		<option value="5">陕西</option>
@@ -101,7 +102,7 @@
 				  						  		<option value="15">四川</option>
 				  						  		<option value="16">安徽</option>
 				  						  		<option value="17">深圳</option>
-				  						  		<option value="18" selected>吉林</option>
+				  						  		<option value="18">吉林</option>
 				  						  		<option value="19">广东</option>
 				  						  		<option value="20">新疆</option>
 				  						  		<option value="21">广西</option>
@@ -130,14 +131,14 @@
 				<div class="control-group">
 					<label for="basicprice" class="control-label">价格设置</label>
 					<div class="controls">
-						<textarea class="input-xlarge" rows="4" name="args[basicprice]" id="basicprice"></textarea>
+						<textarea class="input-xlarge" rows="4" name="args[basicprice]" id="basicprice">10</textarea>
 					  	<span class="help-block">请按照“时长:开通所需积分”格式填写，每行一个，时长以天为单位，免费考场此设置无效。</span>
 					</div>
 				</div>
 				<div class="control-group">
 					<div class="controls">
 						<button class="btn btn-primary" type="submit">提交</button>
-						<input type="hidden" name="basicid" value="15"/>
+						<input type="hidden" name="basicid" value="21"/>
 						<input type="hidden" name="page" value=""/>
 						<input type="hidden" name="modifybasic" value="1"/>
 											</div>
