--- a/exam/data/html/exam/tpls/app/basics_detail.html
+++ b/exam/data/html/exam/tpls/app/basics_detail.html
@@ -88,7 +88,7 @@
 						<a href="index.php?exam-app-basics-open">开通考场</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
-						我的考场					</li>
+						图片预览					</li>
 				</ul>
 				<ul class="nav nav-tabs">
 					<li class="active">
@@ -98,17 +98,17 @@
 				<div class="row-fluid">
 					<div class="span1"></div>
 					<div class="span3">
-						<div class="thumbnail"><img alt="300x200" src="app/exam/styles/image/paper.png" /></div>
+						<div class="thumbnail"><img alt="300x200" src="files/attach/images/content/20150610/14339174438301.jpg" /></div>
 					</div>
 					<div class="span1"></div>
 					<div class="span7">
 						<div class="caption">
-							<h3>我的考场</h3>
+							<h3>图片预览</h3>
 							<p>&nbsp;</p>
 							<p>科目：临床</p>
 							<p>地区：全国</p>
 							<p>您现有积分：0 （<a href="index.php?user-center-payfor">支付宝充值</a> / <a href="#myModal" role="button" data-toggle="modal">代金券充值</a>）</p>
-							<p>到期时间：2018-06-07</p>						</div>
+							<p>到期时间：2018-06-09</p>						</div>
 						<div>&nbsp;</div>
 												<p>
 							<input class="btn" value="已开通" type="button"/>
