--- a/exam/data/html/exam/tpls/app/exam_paper.html
+++ b/exam/data/html/exam/tpls/app/exam_paper.html
@@ -86,15 +86,15 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li>
-						<a href="index.php?exam-app-basics">我的考场</a> <span class="divider">/</span>
+						<a href="index.php?exam-app-basics">付费</a> <span class="divider">/</span>
 					</li>
 					<li>
 						<a href="index.php?exam-app-exam">正式考试</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
-						tese					</li>
+						随机测试					</li>
 				</ul>
-				<h3 class="text-center">tese</h3>
+				<h3 class="text-center">随机测试</h3>
 																				<div id="panel-type1" class="tab-pane active">
 					<ul class="breadcrumb">
 						<li>
@@ -133,7 +133,31 @@
 													</div>
 					</div>
 														</div>
-																				<div aria-hidden="true" id="submodal" class="modal hide fade" role="dialog" aria-labelledby="#mySubModalLabel">
+																				<div id="panel-type7" class="tab-pane">
+					<ul class="breadcrumb">
+						<li>
+							<h5>2、问答题</h5>
+						</li>
+					</ul>
+						                	                	                <div id="question_46" class="paperexamcontent">
+						<div class="media well">
+							<ul class="nav nav-tabs">
+								<li class="active">
+									<span class="badge badge-info questionindex">1</span></a>
+								</li>
+								<li class="btn-group pull-right">
+									<button class="btn" type="button" onclick="javascript:signQuestion('46',this);"><em class="icon-star-empty" title="标注"></em></button>
+								</li>
+							</ul>
+							<div class="media-body well text-warning">
+								<a name="question_46"></a><p>请问五行是指哪五行?</p>							</div>
+														<div class="media-body well">
+																<textarea class="jckeditor" etype="simple" id="editor46" name="question[46]" rel="46"></textarea>
+							</div>
+													</div>
+					</div>
+														</div>
+												<div aria-hidden="true" id="submodal" class="modal hide fade" role="dialog" aria-labelledby="#mySubModalLabel">
 					<div class="modal-header">
 						<button aria-hidden="true" class="close" type="button" data-dismiss="modal">×</button>
 						<h3 id="mySubModalLabel">
@@ -167,7 +191,13 @@
             	                                            	<a id="sign_2" href="#question_2" rel="0" class="badge questionindex">1</a>
             	            	            </dd>
         </dl>
-                    	        	</div>
+                    	                <dl class="clear">
+        	<dt class="float_l"><b>2、问答题</b></dt>
+            <dd>
+            	                                            	<a id="sign_46" href="#question_46" rel="0" class="badge questionindex">1</a>
+            	            	            </dd>
+        </dl>
+                	</div>
 	<div class="modal-footer">
 		 <button aria-hidden="true" class="btn" data-dismiss="modal">隐藏</button>
 	</div>
@@ -187,7 +217,7 @@
 			</div>
 			<div class="span6">
 				<ul class="unstyled">
-					<li><h6>已做 <span class="yesdonumber">0</span> 题 共 <span class="allquestionnumber">50</span> 题 总分：<span class="orange">4</span>分 合格分数线：<span class="orange">2</span>分 考试时间：<span class="orange">60</span>分钟</h6></li>
+					<li><h6>已做 <span class="yesdonumber">0</span> 题 共 <span class="allquestionnumber">50</span> 题 总分：<span class="orange">100</span>分 合格分数线：<span class="orange">100</span>分 考试时间：<span class="orange">60</span>分钟</h6></li>
 				</ul>
 			</div>
 			<div class="span2">
