--- a/exam/data/html/exam/tpls/master/basic_questype.html
+++ b/exam/data/html/exam/tpls/master/basic_questype.html
@@ -61,6 +61,17 @@
 							</div>
 			          	</td>
 					</tr>
+										<tr>
+						<td>7</td>
+						<td>问答题</td>
+						<td>主观题</td>
+						<td>
+			          		<div class="btn-group">
+								<a class="btn" href="index.php?exam-master-basic-modifyquestype&questid=7&page=" title="修改"><em class="icon-edit"></em></a>
+								<a class="btn ajax" href="index.php?exam-master-basic-delquestype&questid=7&page=" title="删除"><em class="icon-remove"></em></a>
+							</div>
+			          	</td>
+					</tr>
 						        	</tbody>
 	        </table>
 	        <div class="pagination pagination-right">
