--- a/exam/data/html/exam/tpls/master/exams_modifyauto.html
+++ b/exam/data/html/exam/tpls/master/exams_modifyauto.html
@@ -50,7 +50,7 @@
 				<div class="control-group">
 					<label class="control-label" for="content">试卷名称：</label>
 			  		<div class="controls">
-			  			<input type="text" name="args[exam]" value="随机测试" needle="needle" msg="您必须为该试卷输入一个名称"/>
+			  			<input type="text" name="args[exam]" value="121" needle="needle" msg="您必须为该试卷输入一个名称"/>
 					</div>
 				</div>
 				<div class="control-group">
@@ -92,7 +92,7 @@
 				<div class="control-group">
 					<label class="control-label" for="content">及格线：</label>
 			  		<div class="controls">
-			  			<input type="text" name="args[examsetting][passscore]" value="100" size="4" needle="needle" msg="你要为本考卷设置一个及格分数线" datatype="number"/>
+			  			<input type="text" name="args[examsetting][passscore]" value="50" size="4" needle="needle" msg="你要为本考卷设置一个及格分数线" datatype="number"/>
 					</div>
 				</div>
 				
@@ -128,7 +128,7 @@
 						<input type="hidden" name="submitsetting" value="1"/>
 					  	<input type="hidden" name="page" value="" />
 					  	<input name="args[examsubject]" type="hidden" value="4">
-					  	<input name="examid" type="hidden" value="14">
+					  	<input name="examid" type="hidden" value="15">
 					    
 					</div>
 				</div>
