--- a/exam/data/html/user/tpls/center/index.html
+++ b/exam/data/html/user/tpls/center/index.html
@@ -31,7 +31,7 @@
 <script type="text/javascript" src="app/core/styles/js/swfu/swfupload.js"></script>
 <script type="text/javascript" src="app/core/styles/js/plugin.js"></script>
 </head><body>
-<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">用户中心</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">				</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">考试系统首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">hongmomanu<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?user-app-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
+<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">用户中心</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">				</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">考试系统首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">zonghui<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?user-app-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
 			<ul class="nav nav-tabs nav-stacked">	<li class="active">		<a href="index.php?user-app">首页</a>	</li>	<li>		<a href="index.php?user-center-privatement">隐私管理</a>	</li>	<li>		<a href="index.php?user-center-payfor">充值积分</a>	</li></ul>		</div>
@@ -46,9 +46,9 @@
 				</div>
 				<div class="span3">
 					<div class="caption">
-						<h3>hongmomanu</h3>
-						<p>注册日期：2015-06-08</p>
-						<p>注册IP：192.168.2.100</p>
+						<h3>zonghui</h3>
+						<p>注册日期：2014-10-16</p>
+						<p>注册IP：1.85.39.126</p>
 						<p>您现有积分：0</p>
 						<p>&nbsp;</p>
 						<p><a class="btn" href="index.php?user-center-payfor">充值</a></p>
@@ -58,9 +58,9 @@
 				<div class="span3">
 					<div class="caption">
 						<h3>&nbsp;</h3>
-						<p>用户组：管理员</p>
+						<p>用户组：教师</p>
 						<p>真实姓名：</p>
-						<p>邮箱：hongmomanu@126.com</p>
+						<p>邮箱：zonghui@dafs.com</p>
 						<p>&nbsp;</p>
 					</div>
 					<div>&nbsp;</div>
