--- a/exam/data/html/exam/tpls/app/basics_open.html
+++ b/exam/data/html/exam/tpls/app/basics_open.html
@@ -211,8 +211,8 @@
 									<div class="text-center">
 										<h6>临床</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="临床">已开通</a>
-																				</p>
+																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=10" title="临床">去开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
